# raven

./: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/raven/: Cargo.toml
crates/raven-adapters/: Cargo.toml
crates/raven-adapters/benches/: in_memory_query.rs
crates/raven-adapters/flame/: .gitignore  README.md  profile.sh  profile_all.sh
crates/raven-adapters/integration_tests/: memgraph_backend.rs
crates/raven-adapters/src/: in_memory.rs  lib.rs
crates/raven-adapters/src/in_memory/: graph.rs  index.rs  mod.rs  oracle.rs  tests.rs  workloads.rs
crates/raven-adapters/src/remote/: backend.rs  cache.rs  client.rs  mod.rs  oracle.rs  snapshot.rs  tests.rs
crates/raven-adapters/src/remote/memgraph/: backend.rs  mod.rs  queries.rs
crates/raven-core/: Cargo.toml
crates/raven-core/src/: common.rs  error.rs  float_newtypes.rs  int_newtypes.rs  lib.rs  metrics.rs
crates/raven-core/src/alg/: coreset_impls.rs  mod.rs  query.rs  sampling_impls.rs  tree_impls.rs  tree_layout.rs  workspace.rs
crates/raven-core/src/alg/tests/: common.rs  mod.rs  query.rs  tree.rs
crates/raven-core/src/clustering/: leiden.rs  mod.rs
crates/raven-core/src/types/: alg.rs  int.rs  mod.rs  pow2.rs
crates/raven-core/src/types/float/: bounds.rs  carrier_ops.rs  infra.rs  macros.rs  mod.rs  quantities.rs  scalar.rs
crates/raven-python/: Cargo.toml
crates/raven-python/src/: classes.rs  convert.rs  errors.rs  lib.rs
crates/raven/examples/: pair_consensus_scores.rs  single_trial_ari.rs
crates/raven/src/: config.rs  consensus.rs  error.rs  index.rs  lib.rs  main.rs  query.rs
examples/: _helpers.py  pair_consensus_scores.py  single_trial_ari.py
experiments/dynamic_sbm/: README.md  consensus_trial_scaling.py  metrics.py  replay_dynamic_sbm.py  reporting.py  workloads.py
python/playgrounds/: consensus_trials_playground.py  in_memory_playground.py
python/raven/: .gitignore  __init__.py  __init__.pyi
python/tests/: test_raven.py
