[workspace]
members = [
  "crates/raven-core",
  "crates/raven-adapters",
  "crates/raven",
  "crates/raven-python",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
raven-core = { path = "crates/raven-core" }
raven-adapters = { path = "crates/raven-adapters" }
raven = { path = "crates/raven" }
