[package]
name = "raven-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
bench-clustering = ["raven-core/clustering"]
memgraph = ["dep:moka", "dep:neo4rs"]
remote-playground = ["bench-clustering", "memgraph", "dep:testcontainers"]

[dependencies]
indicatif = "0.18.4"
moka = { version = "0.12.15", features = ["future"], optional = true }
neo4rs = { version = "0.9.0-rc.9", optional = true }
rand = "0.10.1"
raven-core.workspace = true
rustc-hash = "2.1.2"
testcontainers = { version = "0.27.3", optional = true }
tokio = { version = "1.52.3", features = ["net", "rt", "rt-multi-thread", "time"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "in_memory_query"
harness = false

[[test]]
name = "memgraph_backend"
path = "integration_tests/memgraph_backend.rs"
required-features = ["remote-playground"]
