[package]
name = "raven-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
bench-clustering = ["raven-core/clustering"]

[dependencies]
indicatif = "0.18.4"
rand = "0.10.1"
raven-core.workspace = true
rustc-hash = "2.1.2"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "in_memory_query"
harness = false
