[package]
name = "raven-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.102"
faer = "0.24.0"
itertools = "0.14.0"
num-traits = "0.2.19"
priority-queue = "2.7.0"
rand = "0.10.1"
rayon = "1.12.0"
rustc-hash = "2.1.2"
tokio = { version = "1.51.1", features = ["sync"] }
typed_floats = "1.0.7"
